--- a/lingoappTcc/app/src/main/res/layout/activity_conquistas_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_conquistas_estudante.xml
@@ -5,33 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".HistoricoAtividadesEstudanteActivity">
+    tools:context=".ConquistasEstudanteActivity">
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteY="240dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteY="240dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginTop="65dp"
+        app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="145dp" />
+        tools:layout_editor_absoluteX="50dp" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -97,20 +100,22 @@
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteY="240dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteY="240dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ImageView
         android:id="@+id/imageView2"
