--- a/lingoappTcc/app/src/main/res/layout/activity_alterardados_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_alterardados_professor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".AlterarDadosEstudanteActivity">
+    tools:context=".atividades.perfil.AlterarDadosEstudanteActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
@@ -66,7 +66,7 @@
         android:fontFamily="@font/lalezar"
         android:text="Nome:"
         android:textColor="@color/roxo"
-        android:textSize="16sp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,9 +76,9 @@
         android:id="@+id/plain_text_nome_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
@@ -88,10 +88,9 @@
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_nome_professor" />
-
 
 
     <TextView
@@ -104,7 +103,7 @@
         android:fontFamily="@font/lalezar"
         android:text="Sobrenome:"
         android:textColor="@color/roxo"
-        android:textSize="16sp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,9 +113,9 @@
         android:id="@+id/plain_text_sobrenome_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
@@ -126,7 +125,7 @@
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_sobrenome_professor" />
 
@@ -140,7 +139,7 @@
         android:fontFamily="@font/lalezar"
         android:text="E-mail:"
         android:textColor="@color/roxo"
-        android:textSize="16sp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,19 +149,19 @@
         android:id="@+id/plain_text_email_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:hint="  e-mail"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_email_professor" />
 
@@ -176,7 +175,7 @@
         android:fontFamily="@font/lalezar"
         android:text="Senha:"
         android:textColor="@color/roxo"
-        android:textSize="16sp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,19 +185,19 @@
         android:id="@+id/plain_text_senha_input"
         android:layout_width="310dp"
         android:layout_height="45dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:hint="  senha"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_senha_professor" />
 
@@ -206,16 +205,14 @@
         android:id="@+id/btn_cancelar"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="@color/laranja1"
         android:fontFamily="@font/lalezar"
         android:text="Cancelar"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_excluir_conta"
         app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />
@@ -224,30 +221,33 @@
         android:id="@+id/btn_salvar"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="12dp"
         android:backgroundTint="@color/roxo"
         android:fontFamily="@font/lalezar"
         android:text="Salvar"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_excluir_conta"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />
 
     <TextView
         android:id="@+id/text_excluir_conta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="61dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="12dp"
         android:fontFamily="@font/arimo"
         android:text="Excluir Conta"
         android:textColor="@color/laranja1"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cancelar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
