--- a/lingoappTcc/app/src/main/res/layout/activity_conquistas_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_conquistas_estudante.xml
@@ -5,15 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".ConquistasEstudanteActivity">
+    tools:context=".atividades.perfil.ConquistasEstudanteActivity">
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
@@ -21,9 +23,9 @@
         android:id="@+id/imageView6"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
@@ -31,18 +33,19 @@
         android:id="@+id/imageView5"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="65dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="50dp" />
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="65dp"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
@@ -101,8 +104,6 @@
         android:layout_height="62dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -111,9 +112,9 @@
         android:id="@+id/imageView7"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView8"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
@@ -121,9 +122,9 @@
         android:id="@+id/imageView2"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="65dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
@@ -131,9 +132,9 @@
         android:id="@+id/imageView3"
         android:layout_width="62dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="65dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
