--- a/lingoappTcc/app/src/main/res/layout/activity_historico_atividades_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_historico_atividades_estudante.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".HistoricoAtividadesEstudanteActivity">
+    tools:context=".atividades.perfil.HistoricoAtividadesEstudanteActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
