--- a/lingoappTcc/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".RecuperarSenhaActivity">
+    tools:context=".atividades.cadastroelogin.RecuperarSenhaActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
