--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_estudante1.xml
@@ -97,11 +97,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
-        android:hint="nome"
+        android:hint="  nome"
         android:inputType="textPersonName"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
@@ -117,11 +117,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
-        android:hint="sobrenome"
+        android:hint="  sobrenome"
         android:inputType="textPersonName"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
@@ -137,11 +137,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
-        android:hint="matrícula"
+        android:hint="  matrícula"
         android:inputType="number"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
