--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_professor1.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_professor1.xml
@@ -95,12 +95,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="textPersonName"
-        android:hint="nome"
+        android:hint="  nome"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,12 +115,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="textPersonName"
-        android:hint="sobrenome"
+        android:hint="  sobrenome"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,12 +135,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="number"
-        android:hint="SIAPE"
+        android:hint="  SIAPE"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
