--- a/lingoappTcc/app/src/main/res/layout/activity_cadastro_professor2.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_cadastro_professor2.xml
@@ -95,12 +95,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="textEmailAddress"
-        android:hint="e-mail"
+        android:hint="  e-mail"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,12 +115,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="textPassword"
-        android:hint="senha"
+        android:hint="  senha"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,12 +135,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
         android:inputType="textPassword"
-        android:hint="confirmar senha"
+        android:hint="  confirmar senha"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
         app:layout_constraintEnd_toEndOf="parent"
