--- a/lingoappTcc/app/src/main/res/layout/activity_confirmar_email.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_confirmar_email.xml
@@ -130,11 +130,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
+        android:background="@drawable/fundo_botao"
         android:backgroundTint="@color/branco_escuro"
         android:ems="10"
         android:fontFamily="@font/arimo"
-        android:hint="código de confirmação"
+        android:hint="  código de confirmação"
         android:inputType="number"
         android:textAlignment="textStart"
         android:textColor="@color/cinza_escuro"
