--- a/lingoappTcc/app/src/main/res/layout/activity_turma_selecionada.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_turma_selecionada.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/branco_claro">
+    android:background="@color/branco_claro"
+    tools:context=".atividades.turmas.TurmaSelecionadaActivity">
 
     <FrameLayout
-        android:id="@+id/barra_superior"
+        android:id="@+id/frame_barra_superior"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/barra_superior_tabs"
-        android:elevation="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        android:elevation="2dp">
     </FrameLayout>
 
     <com.google.android.material.tabs.TabLayout
@@ -25,10 +21,6 @@
         android:layout_height="wrap_content"
         android:background="@color/roxo"
         android:elevation="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/barra_superior"
         app:tabIndicatorColor="@color/laranja1"
         app:tabIndicatorGravity="bottom"
         app:tabIndicatorHeight="4dp"
@@ -47,13 +39,4 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <FrameLayout
-        android:id="@+id/frameLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tab_turma_selecionada"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
