--- a/lingoappTcc/app/src/main/res/layout/activity_respostas_atividade.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_respostas_atividade.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".RespostasAtividadeActivity">
+    tools:context=".atividades.turmas.RespostasAtividadeActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
