--- a/lingoappTcc/app/src/main/res/layout/activity_envio_tarefa.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_envio_tarefa.xml
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_pontuacao"
         android:layout_width="152dp"
         android:layout_height="47dp"
         android:layout_marginStart="229dp"
