--- a/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
@@ -138,6 +138,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_historico_atividades"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/btn_sair"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="158dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="157dp"
+                android:layout_marginBottom="69dp"
+                android:backgroundTint="@color/laranja1"
+                android:fontFamily="@font/lalezar"
+                android:text="Sair"
+                app:icon="@android:drawable/ic_lock_power_off"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_conquistas"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
