--- a/lingoappTcc/app/src/main/res/layout/activity_criar_atividade.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_criar_atividade.xml
@@ -179,7 +179,7 @@
         app:layout_constraintTop_toBottomOf="@+id/plain_text_respo_input" />
 
     <Button
-        android:id="@+id/btn_enviar"
+        android:id="@+id/button4"
         android:layout_width="120dp"
         android:layout_height="64dp"
         android:layout_marginStart="73dp"
