--- a/lingoappTcc/app/src/main/res/layout/activity_envio_tarefa.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_envio_tarefa.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".atividades.cadastroelogin.CadastroProfessor1Activity">
+    tools:context=".atividades.atividades.EnvioTarefaActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btn_pontuacao"
+        android:id="@+id/btn_ver_pontuacao"
         android:layout_width="152dp"
         android:layout_height="47dp"
         android:layout_marginStart="229dp"
