--- a/lingoappTcc/app/src/main/res/layout/activity_pag_tarefa_aluno.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_pag_tarefa_aluno.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/branco_claro"
-    tools:context=".atividades.cadastroelogin.CadastroProfessor1Activity">
+    tools:context=".atividades.atividades.PagTarefaAlunoActivity">
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_titulo_ativ" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_proximo"
         android:layout_width="116dp"
         android:layout_height="49dp"
         android:layout_marginStart="40dp"
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_enunciado_ativ" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_enviar"
         android:layout_width="106dp"
         android:layout_height="50dp"
         android:layout_marginStart="95dp"
@@ -102,7 +102,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/btn_proximo"
         app:layout_constraintTop_toBottomOf="@+id/text_enunciado_ativ"
         app:layout_constraintVertical_bias="1.0" />
 
