--- a/lingoappTcc/app/src/main/res/layout/fragment_turma_participantes.xml
+++ b/lingoappTcc/app/src/main/res/layout/fragment_turma_participantes.xml
@@ -1,15 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TurmaParticipantesFragment">
+    android:background="@color/branco_claro"
+    tools:context=".fragmentos.TurmaParticipantesFragment">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="PARTICIPANTES TURMA"
-        android:textSize="25sp"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/text_professor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="12dp"
+            android:fontFamily="@font/arimo"
+            android:text="Professores:"
+            android:textColor="@color/laranja1"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ListView
+            android:id="@+id/lv_professores"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.43"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_professor"
+            tools:listitem="@layout/lista_item_professor">
+
+        </ListView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
