--- a/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_aba_perfil_estudante.xml
@@ -25,8 +25,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                ></FrameLayout>
+                app:layout_constraintTop_toTopOf="parent"></FrameLayout>
 
             <TextView
                 android:id="@+id/text_meu_perfil_estudante"
@@ -50,8 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:constraint_referenced_ids="frame_barra_superior,
-        text_meu_perfil_estudante" >
-            </androidx.constraintlayout.widget.Group>
+        text_meu_perfil_estudante"></androidx.constraintlayout.widget.Group>
 
             <ImageView
                 android:id="@+id/image_avatar_perfil"
@@ -93,15 +91,15 @@
                 android:id="@+id/btn_editar_dados"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="114dp"
-                android:layout_marginTop="150dp"
-                android:layout_marginEnd="123dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="12dp"
                 android:backgroundTint="@color/laranja1"
                 android:fontFamily="@font/lalezar"
                 android:text="Editar Dados"
                 app:icon="@android:drawable/ic_menu_edit"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image_avatar_perfil" />
 
@@ -109,15 +107,15 @@
                 android:id="@+id/btn_historico_atividades"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="85dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="86dp"
+                android:layout_marginEnd="12dp"
                 android:backgroundTint="@color/laranja1"
                 android:fontFamily="@font/lalezar"
                 android:text="Histórico de Atividades"
                 app:icon="@android:drawable/ic_lock_idle_alarm"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_editar_dados" />
 
@@ -125,35 +123,31 @@
                 android:id="@+id/btn_conquistas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="125dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="125dp"
+                android:layout_marginEnd="12dp"
                 android:backgroundTint="@color/laranja1"
                 android:fontFamily="@font/lalezar"
                 android:text="Conquistas"
                 app:icon="@android:drawable/btn_star_big_on"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_historico_atividades"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_historico_atividades" />
 
             <Button
                 android:id="@+id/btn_sair"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="157dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="157dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="12dp"
                 android:backgroundTint="@color/laranja1"
                 android:fontFamily="@font/lalezar"
                 android:text="Sair"
                 app:icon="@android:drawable/ic_lock_power_off"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_conquistas" />
         </androidx.constraintlayout.widget.ConstraintLayout>
